refactor(项目设置): 优化缺陷同步定时任务配置逻辑